# mymatrix

./: Cargo.toml  readme.md
src/: detail.rs  lib.rs  matrix.rs  utility.rs  vector.rs
tests/: test_matrix.rs  test_vector.rs
