[package]
name = "mymatrix"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Qingyu Chen <chen_qingyu@qq.com>"]
description = "My simple matrix library that can perform fraction operations."
readme = "readme.md"
homepage = "https://github.com/chen-qingyu/mymatrix"
keywords = ["matrix", "fraction"]

[dependencies]
pyinrs = "1"

[dev-dependencies]
rstest = "0.18.2"
