[package]
name = "mymatrix"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Chen QingYu <chen_qingyu@qq.com>"]
description = "My simple matrix library that can perform fraction operations."
readme = "readme.md"
repository = "https://github.com/chen-qingyu/mymatrix"
keywords = ["matrix", "fraction"]

[dependencies]
pyinrs = "1.8"
auto_ops = "0.3"

[dev-dependencies]
rstest = "0.22"
